[project]
name = "orchestrator-server"
version = "0.1.0"
description = "Ink detection orchestrator service using FastAPI and Argo Workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.~115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "boto3>=1.34.0",
    "kubernetes>=30.1.0",
    "python-dotenv>=1.0.1",
    "typing-extensions>=4.11.0",
    "requests>=2.32.0",
]

[project.scripts]
orchestrator-server = "orchestrator_server.main:run"
